--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
@@ -27,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "stylis-plugin-rtl": "^2.1.1",
     "tailwind-merge": "^2.5.4",
@@ -36,6 +39,7 @@
     "@eslint/js": "^9.13.0",
     "@iconify/tailwind": "^1.1.3",
     "@types/lodash": "^4.17.13",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-slick": "^0.23.13",
