--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
