--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
