--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-router": "^1.90.0",
+    "@tanstack/router": "^0.0.1-beta.53",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -25,8 +27,8 @@
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.456.0",
     "primereact": "^10.8.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -41,6 +43,8 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@iconify/tailwind": "^1.1.3",
+    "@tanstack/router-devtools": "^1.90.0",
+    "@tanstack/router-plugin": "^1.87.13",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
