--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "framer": "^2.4.1",
     "lucide-react": "^0.456.0",
+    "motion": "^12.0.0",
+    "numeral": "^2.0.6",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
