--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:all": "npm run prisma:migrate && npm run prisma:deploy && npm run prisma:generate",
+    "prisma:generate": "npx prisma generate --schema=src/prisma/schema.prisma",
+    "prisma:deploy": "npx prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev  --create-only --schema=src/prisma/schema.prisma"
   },
   "dependencies": {
     "@nest-middlewares/cors": "^10.0.0",
@@ -44,6 +48,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
