--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "motion": "^12.0.0",
     "numeral": "^2.0.6",
     "primereact": "^10.8.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
