--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "simplebar-react": "^3.3.0",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
