--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@floating-ui/react": "^0.27.3",
+    "@headlessui/react": "^2.2.0",
     "@iconify/react": "^5.0.2",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
@@ -36,8 +38,9 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "recharts": "^2.15.1",
+    "simplebar-react": "^3.3.0",
     "slick-carousel": "^1.8.1",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.1.15",
