--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@date-io/date-fns": "^3.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@floating-ui/react": "^0.27.3",
     "@headlessui/react": "^2.2.0",
     "@iconify/react": "^5.0.2",
     "@mui/icons-material": "^6.1.6",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^6.4.3",
+    "@mui/x-date-pickers": "^7.25.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
@@ -26,6 +28,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^2.29.3",
     "embla-carousel-react": "^8.3.1",
     "framer": "^2.4.1",
     "lucide-react": "^0.456.0",
