--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,10 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
