--- a/client/package.json
+++ b/client/package.json
@@ -40,8 +40,10 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
+    "react-media-previewer": "^1.3.10",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "react-viewer": "^3.2.2",
     "recharts": "^2.15.1",
     "simplebar-react": "^3.3.0",
     "slick-carousel": "^1.8.1",
