--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,13 @@
   },
   "dependencies": {
     "@nest-middlewares/cors": "^10.0.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
