--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^2.29.3",
     "embla-carousel-react": "^8.3.1",
     "framer": "^2.4.1",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.456.0",
     "motion": "^12.0.0",
     "numeral": "^2.0.6",
@@ -41,9 +42,11 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-media-previewer": "^1.3.10",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-viewer": "^3.2.2",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.15.1",
     "simplebar-react": "^3.3.0",
     "slick-carousel": "^1.8.1",
