feat: add jwt-decode dependency for handling JSON Web Tokens

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/websockets": "^11.0.20",
+    "jwt-decode": "^4.0.0",
     "socket.io": "^4.8.1"
   }
 }
