feat: add jwt-decode and socket.io-client dependencies to package.json

--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.3.1",
     "framer": "^2.4.1",
     "jsqr": "^1.4.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "motion": "^12.0.0",
     "numeral": "^2.0.6",
@@ -50,6 +51,7 @@
     "recharts": "^2.15.1",
     "simplebar-react": "^3.3.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
